--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <title>Гостиницы</title>
   </head>
-
   <body>
     <div class="container">
       <page-header>
         <nav class="navigation">
           <a class="navigation-logo" href="index.html">
-            <img class="page-header-logo" src="#" alt="логотип «Седона»">
+            <img class="page-header-logo" src="image/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -142,7 +141,7 @@
             </a>
             <ul class="hotels-list">
               <li class="hotels-card">
-                <img class="hotels-card-image" src="#" alt="Amara Resort & Spa">
+                <img class="hotels-card-image" src="image/hotels/hotel-1.jpg" alt="Amara Resort & Spa" width="300" height="212">
                 <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -160,7 +159,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="#" alt="Villas at Poco Diablo">
+                <img class="hotels-card-image" src="image/hotels/hotel-2.jpg" alt="Villas at Poco Diablo" width="300" height="212">
                 <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -178,7 +177,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="#" alt="Desert Quail Inn">
+                <img class="hotels-card-image" src="image/hotels/hotel-3.jpg" alt="Desert Quail Inn" width="300" height="212">
                 <h3 class="hotels-card-title">Desert Quail Inn</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -196,7 +195,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="#" alt="GreenTree Inn">
+                <img class="hotels-card-image" src="image/hotels/hotel-4.jpg" alt="GreenTree Inn" width="300" height="212">
                 <h3 class="hotels-card-title">GreenTree Inn</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -287,7 +286,7 @@
         <section class="page-footer-contacts">
           <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
           <a href="https://htmlacademy.ru/">
-            <img src="#" alt=".html academy">
+            <img src="image/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
           </a>
         </section>
       </footer>
