Добавляет изменение названия папки с изобржениями

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <page-header>
         <nav class="navigation">
           <a class="navigation-logo" href="index.html">
-            <img class="page-header-logo" src="image/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
+            <img class="page-header-logo" src="images/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -141,7 +141,7 @@
             </a>
             <ul class="hotels-list">
               <li class="hotels-card">
-                <img class="hotels-card-image" src="image/hotels/hotel-1.jpg" alt="Amara Resort & Spa" width="300" height="212">
+                <img class="hotels-card-image" src="images/hotels/hotel-1.jpg" alt="Amara Resort & Spa" width="300" height="212">
                 <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -159,7 +159,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="image/hotels/hotel-2.jpg" alt="Villas at Poco Diablo" width="300" height="212">
+                <img class="hotels-card-image" src="images/hotels/hotel-2.jpg" alt="Villas at Poco Diablo" width="300" height="212">
                 <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -177,7 +177,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="image/hotels/hotel-3.jpg" alt="Desert Quail Inn" width="300" height="212">
+                <img class="hotels-card-image" src="images/hotels/hotel-3.jpg" alt="Desert Quail Inn" width="300" height="212">
                 <h3 class="hotels-card-title">Desert Quail Inn</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -195,7 +195,7 @@
                 </div>
               </li>
               <li class="hotels-card">
-                <img class="hotels-card-image" src="image/hotels/hotel-4.jpg" alt="GreenTree Inn" width="300" height="212">
+                <img class="hotels-card-image" src="images/hotels/hotel-4.jpg" alt="GreenTree Inn" width="300" height="212">
                 <h3 class="hotels-card-title">GreenTree Inn</h3>
                 <div class="hotels-card-group-price">
                   <span class="hotels-card-type">Гостиница</span>
@@ -286,7 +286,7 @@
         <section class="page-footer-contacts">
           <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
           <a href="https://htmlacademy.ru/">
-            <img src="image/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
+            <img src="images/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
           </a>
         </section>
       </footer>
