--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a class="navigation-logo">
-            <img class="page-header-logo" src="image/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
+            <img class="page-header-logo" src="images/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -44,7 +44,7 @@
       <main class="main-index">
         <h1 class="visually-hidden">Седона</h1>
         <figure>
-          <img class="main-index-logo" src="image/welcome-sedona.svg" alt="Добро пожаловать в Седону" width="458" height="352">
+          <img class="main-index-logo" src="images/welcome-sedona.svg" alt="Добро пожаловать в Седону" width="458" height="352">
         </figure>
         <section class="advantages">
           <h2 class="description-title">Седона — небольшой городок в Аризоне,
@@ -55,7 +55,7 @@
             <li class="advantages-item">
               <h3 class="advantages-title blue">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img class="advantages-image" src="image/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор" width="800" height="384">
+              <img class="advantages-image" src="images/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор" width="800" height="384">
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
@@ -70,22 +70,22 @@
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
             <li class="advantages-item blue">
-              <img class="advantages-image" src="image/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола" width="800" height="384">
+              <img class="advantages-image" src="images/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола" width="800" height="384">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-icon" src="image/advantages/house.svg" alt="Дом" width="75" height="72">
+              <img class="advantages-icon" src="images/advantages/house.svg" alt="Дом" width="75" height="72">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="advantages-item white">
-              <img class="advantages-icon" src="image/advantages/food.svg" alt="Бургер" width="74" height="70">
+              <img class="advantages-icon" src="images/advantages/food.svg" alt="Бургер" width="74" height="70">
               <h3 class="advantages-title">Еда</h3>
               <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-icon" src="image/advantages/present.svg" alt="Сувенир" width="64" height="76">
+              <img class="advantages-icon" src="images/advantages/present.svg" alt="Сувенир" width="64" height="76">
               <h3 class="advantages-title">Сувениры</h3>
               <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
@@ -137,7 +137,7 @@
         <section class="page-footer-contacts">
           <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
           <a href="https://htmlacademy.ru/">
-            <img src="image/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
+            <img src="images/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
           </a>
         </section>
       </footer>
