--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <div class="container">
@@ -37,7 +38,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <button class="navigation-button" type="button">Хочу сюда!</button>
+              <button class="button navigation-button" type="button">Хочу сюда!</button>
             </li>
         </ul>
       </header>
@@ -46,7 +47,7 @@
         <h1 class="visually-hidden">Седона</h1>
 
         <figure>
-          <section class="welcome">
+          <section class="welcome-container">
             <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
             <img class="main-index-logo" src="images/welcome-sedona.svg" alt="Добро пожаловать в Седону" width="458" height="352">
           </section>
@@ -57,8 +58,8 @@
           <p class="description-compare">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
           <h2 class="visually-hidden">Приимущесва</h2>
           <ul class="advantages-list">
-            <li class="advantages-item">
-              <h3 class="advantages-title blue">Настоящий городок</h3>
+            <li class="advantages-item blue">
+              <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
               <img class="advantages-image" src="images/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор" width="800" height="384">
             </li>
@@ -66,7 +67,7 @@
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item light-blue">
               <h3 class="advantages-title">Красивая дорога</h3>
               <p class="advantages-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
             </li>
@@ -97,7 +98,7 @@
         <section class="search">
           <h2 class="search-title">Заинтересовались?</h2>
           <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-          <a class="search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
+          <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
         </section>
 
         <section class="subscribe">
@@ -106,7 +107,7 @@
             <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
-              <button class="subscribe-button" type="submit">Подписаться</button>
+              <button class="button subscribe-button" type="submit">Подписаться</button>
             </form>
           </div>
 
@@ -120,17 +121,17 @@
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy">
+              <a class="button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy">
+              <a class="button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy">
+              <a class="button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
@@ -139,7 +140,7 @@
 
         <section class="page-footer-phone">
           <h2 class="visually-hidden">Номер телефона</h2>
-          <a class="pa" href="tel: +7 (812) 812-12-12">+7 (812) 812-12-12</a>
+          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
 
         <section class="page-footer-contacts">
