--- a/index.html
+++ b/index.html
@@ -8,109 +8,129 @@
   <body>
     <div class="page-container">
       <header class="page-header">
-        <div class="page-hedear-container">
-          <nav class="navigation">
-            <a class="navigation-logo">
-              <img class="page-header-logo" src="images/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
-            </a>
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Главная</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">О седоне</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="catalog.html">Гостиницы</a>
-              </li>
-            </ul>
-          </nav>
-
-          <ul class="navigation-list navigation-user">
-              <li class="navigation-item">
-                <span class="visually-hidden">
-                  <a class="navigation-link" href="#">Поиск</a>
-                </span>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">
-                  <span class="visually-hidden">Избранное</span>
-                  <span class="counter">12</span>
-                </a>
-              </li>
-              <li class="navigation-item">
-                <button class="button navigation-button" type="button">Хочу сюда!</button>
-              </li>
+        <nav class="navigation">
+          <a class="navigation-logo">
+            <img class="page-header-logo" src="images/logo-sedona.svg" alt="Логотип «Седона»" width="140" height="70">
+          </a>
+          <ul class="navigation-list reset-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="user-panel reset-list">
+            <li class="navigation-item">
+              <a class="user-panel-link" href="#">
+                <span class="visually-hidden" href="#">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="user-panel-link" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <span class="counter">12</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <button class="button navigation-button" type="button">Хочу сюда!</button>
+            </li>
+        </ul>
       </header>
 
       <main class="main-container main-index">
-        <h1 class="visually-hidden" hidden>Седона</h1>
+        <h1 class="visually-hidden">Седона</h1>
 
         <section>
           <figure class="welcome-container">
-            <h2 class="visually-hidden" hidden>Добро пожаловать в Седону</h2>
+            <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
             <img class="main-index-logo" src="images/welcome-sedona.svg" alt="Добро пожаловать в Седону" width="458" height="352">
           </figure>
         </section>
 
         <section class="advantages">
-          <h2 class="description-title">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
-          <p class="description-compare">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
-          <h2 class="visually-hidden" hidden>Приимущесва</h2>
+          <div class="description-container">
+            <h2 class="description-title">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
+            <p class="description-compare">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
+          <h2 class="visually-hidden">Приимущесва</h2>
           <ul class="advantages-list">
             <li class="advantages-item-picture">
               <div class="advantages-item">
-                <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+                <div class="text-container">
+                  <h3 class="advantages-title">Настоящий городок</h3>
+                  <p class="advantages-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
               </div>
               <img class="advantages-image" src="images/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор" width="800" height="384">
             </li>
             <li class="advantages-item">
-              <h3 class="advantages-title">Небольшая площадь</h3>
-              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              <div class="text-container">
+                <h3 class="advantages-title">Небольшая площадь</h3>
+                <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              </div>
             </li>
             <li class="advantages-item light-blue">
-              <h3 class="advantages-title">Красивая дорога</h3>
-              <p class="advantages-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
-            </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <p class="advantages-description">Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
-            </li>
-            <li class="advantages-item-picture">
-              <img class="advantages-image" src="images/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола" width="800" height="384">
-              <div class="advantages-item-container">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p class="advantages-description">Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
+              <div class="text-container">
+                <h3 class="advantages-title">Красивая дорога</h3>
+                <p class="advantages-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
               </div>
             </li>
             <li class="advantages-item">
-              <h3 class="advantages-title">Жильё</h3>
-              <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле, всё как в&nbsp;кино!</p>
+              <div class="text-container">
+                <h3 class="advantages-title">Мало туристов</h3>
+                <p class="advantages-description">Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
+              </div>
             </li>
-            <li class="advantages-item white">
-              <h3 class="advantages-title">Еда</h3>
-              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+            <li class="advantages-item-picture">
+              <img class="advantages-image" src="images/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола" width="800" height="384">
+              <div class="advantages-item">
+                <div class="text-container">
+                  <h3 class="advantages-title">Там есть мост дьявола</h3>
+                  <p class="advantages-description">Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
+                </div>
+              </div>
             </li>
             <li class="advantages-item">
-              <h3 class="advantages-title">Сувениры</h3>
-              <p class="advantages-description">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
+              <div class="text-container">
+                <h3 class="advantages-title">Жильё</h3>
+                <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле, всё как в&nbsp;кино!</p>
+              </div>
+            </li>
+            <li class="advantages-item white">
+              <div class="text-container">
+                <h3 class="advantages-title">Еда</h3>
+                <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              </div>
+            </li>
+            <li class="advantages-item">
+              <div class="text-container">
+                <h3 class="advantages-title">Сувениры</h3>
+                <p class="advantages-description">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
+              </div>
             </li>
           </ul>
         </section>
 
         <section class="search">
-          <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-          <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
+          <div class="index-search-container">
+            <h2 class="search-title">Заинтересовались?</h2>
+            <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+            <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
+          </div>
         </section>
 
         <section class="subscribe">
           <div class="subscribe-background">
-            <h2 class="subscribe-title">Подпишитесь на&nbsp;рассылку</h2>
-            <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
+            <div class="subscribe-text-container">
+              <h2 class="subscribe-title">Подпишитесь на&nbsp;рассылку</h2>
+              <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
+            </div>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
               <button class="button subscribe-button" type="submit">Подписаться</button>
@@ -120,14 +140,13 @@
       </main>
 
       <footer class="page-footer">
-        <h2 class="visually-hidden" hidden>Контактная информация</h2>
-        <div class="page-footer-container">
+        <h2 class="visually-hidden">Контактная информация</h2>
           <section class="footer-social">
-            <h2 class="visually-hidden" hidden>Социальные сети</h2>
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="button social-button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden" hidden>ВКонтакте</span>
+                  <span class="visually-hidden">ВКонтакте</span>
                   <svg width="25" height="15" viewBox="0 0 25 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17044 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z" fill="#83B3D3"/>
                   </svg>
@@ -135,7 +154,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="button social-button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden" hidden>Телеграм</span>
+                  <span class="visually-hidden">Телеграм</span>
                   <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z" fill="#83B3D3"/>
                   </svg>
@@ -143,7 +162,7 @@
               </li>
               <li class="footer-social-item">
                 <a class="button social-button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden" hidden>Ютуб</span>
+                  <span class="visually-hidden">Ютуб</span>
                   <svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
                   </svg>
@@ -153,17 +172,16 @@
           </section>
 
           <section class="page-footer-phone">
-            <h2 class="visually-hidden" hidden>Номер телефона</h2>
+            <h2 class="visually-hidden">Номер телефона</h2>
             <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </section>
 
           <section class="page-footer-contacts">
-              <h2 class="visually-hidden" hidden>Ссылка на сайт разработчика</h2>
+              <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
               <a href="https://htmlacademy.ru/">
                 <img src="images/logo-htmlacademy.svg" alt=".html academy" width="115" height="33">
               </a>
           </section>
-        </div>
       </footer>
     </div>
   </body>
